--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "export": "next export",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
@@ -25,7 +26,7 @@
     "eslint-config-next": "14.1.1",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
-    "prettier": "2.8.8",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
